--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,13 @@
   --third-text-color: #9da4bd;
   --fourth-text-color: #555555;
   --accent-color: #2196f3;
+  --icon-color: #afb1b8;
+  --icon-color-hover: #ffffff;
   --footer-background: #2f303a;
   --footer-dets-color: rgba(255, 255, 255, 0.6);
+  --additional-color-footer: #44454e;
+  --additional-icon-color-hover: #2196f3;
+  --icon-color: #afb1b8;
 }
 
 body {
@@ -64,7 +69,6 @@ img {
 }
 
 .section {
-  max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -116,16 +120,14 @@ img {
   margin-left: 50px;
 }
 
-.contacts-icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
 .header-link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-style: 14px;
+  line-height: 1.14px;
   letter-spacing: 0.02em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: var(--second-header-color);
 }
 
@@ -145,17 +147,22 @@ img {
   color: var(--accent-color);
 }
 
+.contacts-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
 /* HERO */
 .hero {
   background-color: var(--footer-background);
   text-align: center;
+  max-width: 1600px;
   padding-top: 200px;
   padding-bottom: 200px;
   margin-bottom: 0;
   min-height: 600px;
-  max-width: 1600px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../img/hero-image.jpg);
+  min-width: 1600px;
+  background-image: url(../img/hero-image.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -180,7 +187,7 @@ img {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  color: var(--first-title-color-color);
+  color: var(--first-title-color);
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   border: 1px solid transparent;
@@ -214,7 +221,7 @@ img {
   clip: rect(0 0 0 0);
 }
 .features-title {
-  color: var(--primary-text-color);
+  color: var(--header-color);
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -226,15 +233,15 @@ img {
   align-items: center;
   width: 1170px;
 }
-.features-text {
-  font-weight: 400;
-  color: var(--additional-text-color);
-  font-size: 14px;
-  line-height: 1.71;
-  width: 270px;
+
+.features-icon-list {
+  width: 1170px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.features-item {
+.features-icon-item {
   width: 270px;
   height: 120px;
   display: flex;
@@ -243,19 +250,30 @@ img {
   background-color: var(--third-btn-color);
 }
 
+.features-icon {
+  width: 70px;
+  height: 70px;
+}
+
+.features-text {
+  font-weight: 400;
+  color: var(--second-header-color);
+  font-size: 14px;
+  line-height: 1.71;
+}
+
 .features-item:not(:last-child) {
   margin-right: 30px;
 }
 
-.feature-icon {
-  width: 70px;
-  height: 70px;
+.features-item {
+  padding-top: 30px;
 }
 
 /* ABOUT-US */
 
 .directions {
-  padding-top: 47px;
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 .directions-title {
@@ -278,7 +296,7 @@ img {
 
 /* OUR-TEAM */
 .team {
-  background-color: var(--third-btn-colorr);
+  background-color: var(--third-btn-color);
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -308,6 +326,8 @@ img {
 .team-description {
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-right: 32px;
+  padding-left: 32px;
 }
 
 .team .section {
@@ -329,6 +349,49 @@ img {
   line-height: 1.19;
   text-align: center;
   display: block;
+  margin-bottom: 16px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 206px;
+}
+.social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+  color: var(--icon-color-hover);
+}
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--icon-color);
+}
+.social-icon {
+  fill: currentColor;
+}
+.social-link:hover svg,
+.social-link:focus svg {
+  fill: currentColor;
+}
+
+footer .social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  widows: 44px;
+  hei: 44px;
+  border-radius: 50%;
+  background-color: var(--additional-color-footer);
+  color: var(--first-btn-color);
 }
 
 .filter-list {
@@ -391,7 +454,52 @@ img {
 }
 
 /*---------------Buttons------------------*/
+/* -------CUSOTMERS-------- */
 
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.clients-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-color);
+  margin-bottom: 50px;
+}
+.clients-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1170px;
+}
+.client-item:not(:last-child) {
+  margin-right: 30px;
+}
+.client-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+}
+.client-link:hover,
+.client-linkfocus {
+  border: 1px solid var(--additional-icon-color-hover);
+  cursor: pointer;
+}
+.client-link:hover svg,
+.client-link:focus svg {
+  --color4: var(--additional-icon-color-hover);
+  --color2: var(--additional-icon-color-hover);
+}
+.client-ikon {
+  --color2: var(--icon-color);
+}
 /**-----------------COMPONENTS----------------------- */
 
 .a-title {
@@ -517,6 +625,7 @@ img {
   background-color: var(--footer-background);
   padding-top: 60px;
   padding-bottom: 60px;
+  height: 252px;
 }
 .footer .logo {
   display: block;
@@ -525,6 +634,17 @@ img {
   font-size: 26px;
   line-height: 1.2;
   margin-bottom: 20px;
+}
+
+footer .container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 1170px;
+}
+
+.logo-and-address {
+  margin-right: 70px;
 }
 
 .footer-address-item:not(:last-child) {
@@ -536,6 +656,7 @@ img {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
+  margin-bottom: 9px;
 }
 .footer-address-post {
   color: var(--first-title-color);
@@ -547,6 +668,11 @@ img {
 .footer-address-link:focus {
   color: var(--accent-color);
 }
+
+.footer-social-icon {
+  fill: currentColor;
+}
+
 .first-word {
   color: var(--accent-color);
 }
@@ -559,6 +685,20 @@ img {
 
 .logo-second-part {
   color: var(--first-title-color);
+}
+
+.join {
+  padding-top: 12px;
+  padding-bottom: 40px;
+}
+
+.join-text {
+  font-weight: 7000;
+  font-style: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--first-title-color);
+  margin-bottom: 20px;
 }
 
 /* PORTFOLIO-PROJECTS */
